--- a/templates/bridge_RedHat.j2
+++ b/templates/bridge_RedHat.j2
@@ -28,3 +28,11 @@ BOOTPROTO=dhcp
 STP={{ item.stp }}
 {% endif %}
 {% endif %}
+
+{% if item.nm_controlled is defined %}
+NM_CONTROLLED={{ item.nm_controlled }}
+{% endif %}
+
+{% if item.defroute is defined %}
+DEFROUTE={{ item.defroute }}
+{% endif %}
