Add support for specifying MTU for RHEL systems
Add the MTU option to the bond, bridge and ethernet templates for Red
Hat based systems.

Also clean up empty and commented out lines from the main playbook.

--- a/templates/bond_RedHat.j2
+++ b/templates/bond_RedHat.j2
@@ -33,3 +33,7 @@ NM_CONTROLLED={{ item.nm_controlled }}
 {% if item.defroute is defined %}
 DEFROUTE={{ item.defroute }}
 {% endif %}
+
+{% if item.mtu is defined %}
+MTU={{ item.mtu }}
+{% endif %}
