--- a/templates/bridge_RedHat.j2
+++ b/templates/bridge_RedHat.j2
@@ -36,3 +36,7 @@ NM_CONTROLLED={{ item.nm_controlled }}
 {% if item.defroute is defined %}
 DEFROUTE={{ item.defroute }}
 {% endif %}
+
+{% if item.mtu is defined %}
+MTU={{ item.mtu }}
+{% endif %}
