--- a/templates/ethernet_RedHat.j2
+++ b/templates/ethernet_RedHat.j2
@@ -31,3 +31,7 @@ NM_CONTROLLED={{ item.nm_controlled }}
 {% if item.defroute is defined %}
 DEFROUTE={{ item.defroute }}
 {% endif %}
+
+{% if item.mtu is defined %}
+MTU={{ item.mtu }}
+{% endif %}
