--- a/templates/bond_RedHat.j2
+++ b/templates/bond_RedHat.j2
@@ -1,5 +1,5 @@
 
-{% if item.bootproto == 'static' %}
+{% if item.bootproto != 'dhcp' %}
 DEVICE={{ item.device }}
 USERCTL=no
 BOOTPROTO=none
@@ -15,12 +15,12 @@ NETMASK={{ item.netmask }}
 {% if item.gateway is defined %}
 GATEWAY={{ item.gateway }}
 {% endif %}
-BONDING_OPTS="mode={{ item.bond_mode }} miimon={{ item.bond_miimon|default(100) }} "
+BONDING_OPTS="mode={{ item.bond_mode }} miimon={{ item.bond_miimon|default(100) }} {{ item.bond_extra_opts|default('') }} "
 {% endif %}
 
 {% if item.bootproto == 'dhcp' %}
 DEVICE={{ item.device }}
-BONDING_OPTS="mode={{ item.bond_mode }} miimon={{ item.bond_miimon|default(100) }} "
+BONDING_OPTS="mode={{ item.bond_mode }} miimon={{ item.bond_miimon|default(100) }} {{ item.bond_extra_opts|default('') }} "
 USERCTL=no
 ONBOOT={{ item.onboot|default("yes") }}
 BOOTPROTO=dhcp
@@ -36,4 +36,12 @@ DEFROUTE={{ item.defroute }}
 
 {% if item.mtu is defined %}
 MTU={{ item.mtu }}
+{% endif %}
+
+{% if item.bonding_master is defined %}
+BONDING_MASTER={{ item.bonding_master }}
+{% endif %}
+
+{% if item.bridge is defined %}
+BRIDGE={{ item.bridge }}
 {% endif %}
