--- a/templates/bridge_RedHat.j2
+++ b/templates/bridge_RedHat.j2
@@ -1,21 +1,20 @@
-
 {% if item.bootproto == 'static' %}
 DEVICE={{ item.device }}
 TYPE=Bridge
 BOOTPROTO=none
-{% if item.stp is defined %}
+{% if item.stp is defined -%}
 STP={{ item.stp }}
 {% endif %}
-{% if item.address is defined %}
+{%- if item.address is defined -%}
 IPADDR={{ item.address }}
 {% endif %}
-{% if item.onboot is defined %}
+{%- if item.onboot is defined -%}
 ONBOOT={{ item.onboot }}
 {% endif %}
-{% if item.netmask is defined %}
+{%- if item.netmask is defined -%}
 NETMASK={{ item.netmask }}
 {% endif %}
-{% if item.gateway is defined %}
+{%- if item.gateway is defined -%}
 GATEWAY={{ item.gateway }}
 {% endif %}
 {% endif %}
@@ -24,16 +23,16 @@ GATEWAY={{ item.gateway }}
 DEVICE={{ item.device }}
 TYPE=bridge
 BOOTPROTO=dhcp
-{% if item.stp is defined %}
+{% if item.stp is defined -%}
 STP={{ item.stp }}
 {% endif %}
 {% endif %}
 
-{% if item.nm_controlled is defined %}
+{%- if item.nm_controlled is defined -%}
 NM_CONTROLLED={{ item.nm_controlled }}
 {% endif %}
 
-{% if item.ipv6_address is defined %}
+{%- if item.ipv6_address is defined -%}
 IPV6INIT="yes"
 IPV6_AUTOCONF="yes"
 IPV6_DEFROUTE="yes"
@@ -44,15 +43,14 @@ IPV6_PEERROUTES="yes"
 IPV6_PRIVACY="no"
 IPV6ADDR={{ item.ipv6_address }}
 {% endif %}
-{% if item.ipv6_gateway is defined %}
+{%- if item.ipv6_gateway is defined -%}
 IPV6_DEFAULTGW="{{ item.ipv6_gateway }}"
 {% endif %}
 
-
-{% if item.defroute is defined %}
+{%- if item.defroute is defined -%}
 DEFROUTE={{ item.defroute }}
 {% endif %}
 
-{% if item.mtu is defined %}
+{%- if item.mtu is defined -%}
 MTU={{ item.mtu }}
 {% endif %}
