--- a/templates/ethernet_RedHat.j2
+++ b/templates/ethernet_RedHat.j2
@@ -1,20 +1,19 @@
-
 {% if item.bootproto == 'static' %}
 DEVICE={{ item.device }}
 BOOTPROTO=none
-{% if item.address is defined %}
+{% if item.address is defined -%}
 IPADDR={{ item.address }}
 {% endif %}
-{% if item.onboot is defined %}
+{%- if item.onboot is defined -%}
 ONBOOT={{ item.onboot }}
 {% endif %}
-{% if item.netmask is defined %}
+{%- if item.netmask is defined -%}
 NETMASK={{ item.netmask }}
 {% endif %}
-{% if item.gateway is defined %}
+{%- if item.gateway is defined -%}
 GATEWAY={{ item.gateway }}
 {% endif %}
-{% if item.vlan is defined %}
+{%- if item.vlan is defined -%}
 VLAN=yes
 {% endif %}
 {% endif %}
@@ -24,11 +23,11 @@ DEVICE={{ item.device }}
 BOOTPROTO=dhcp
 {% endif %}
 
-{% if item.nm_controlled is defined %}
+{%- if item.nm_controlled is defined -%}
 NM_CONTROLLED={{ item.nm_controlled }}
 {% endif %}
 
-{% if item.ipv6_address is defined %}
+{%- if item.ipv6_address is defined -%}
 IPV6INIT="yes"
 IPV6_AUTOCONF="yes"
 IPV6_DEFROUTE="yes"
@@ -39,14 +38,14 @@ IPV6_PEERROUTES="yes"
 IPV6_PRIVACY="no"
 IPV6ADDR={{ item.ipv6_address }}
 {% endif %}
-{% if item.ipv6_gateway is defined %}
+{%- if item.ipv6_gateway is defined -%}
 IPV6_DEFAULTGW="{{ item.ipv6_gateway }}"
 {% endif %}
 
-{% if item.defroute is defined %}
+{%- if item.defroute is defined -%}
 DEFROUTE={{ item.defroute }}
 {% endif %}
 
-{% if item.mtu is defined %}
+{%- if item.mtu is defined -%}
 MTU={{ item.mtu }}
 {% endif %}
