--- a/templates/ethernet_RedHat.j2
+++ b/templates/ethernet_RedHat.j2
@@ -1,5 +1,5 @@
 
-{% if item.bootproto == 'static' %}
+{% if item.bootproto == 'static' or item.bootproto == 'none' %}
 DEVICE={{ item.device }}
 BOOTPROTO=none
 {% if item.address is defined %}
@@ -16,6 +16,9 @@ GATEWAY={{ item.gateway }}
 {% endif %}
 {% if item.vlan is defined %}
 VLAN=yes
+{% endif %}
+{%- if item.bridge is defined -%}
+BRIDGE={{ item.bridge }}
 {% endif %}
 {% endif %}
 
