Allow setting bonding module options
 - The template was there but from history never used?
 - Added possibility to set NOZEROCONF=yes - in case you don't need the
   169.254.0.0 from every interface

--- a/templates/bond_RedHat.j2
+++ b/templates/bond_RedHat.j2
@@ -36,6 +36,9 @@ DEFROUTE={{ item.defroute }}
 {% if item.mtu is defined %}
 MTU={{ item.mtu }}
 {% endif %}
+{%- if item.zeroconf is defined -%}
+NOZEROCONF={{ item.zeroconf }}
+{% endif %}
 
 {% if item.bonding_master is defined %}
 BONDING_MASTER={{ item.bonding_master }}
