--- a/templates/bridge_RedHat.j2
+++ b/templates/bridge_RedHat.j2
@@ -54,6 +54,6 @@ DEFROUTE={{ item.defroute }}
 {%- if item.mtu is defined -%}
 MTU={{ item.mtu }}
 {% endif %}
-{%- if item.zeroconf is defined -%}
-NOZEROCONF={{ item.zeroconf }}
+{%- if item.nozeroconf is defined -%}
+NOZEROCONF={{ item.nozeroconf }}
 {% endif %}
