Allow setting BRIDGING_OPTS on EL bridges
Tested with only these two settings:

 - multicast_snooping
 - multicast_querier

Tested manually by:

<pre>
$ cat /sys/class/net/bridge1/bridge/multicast_querier
0
$ cat /sys/class/net/bridge1/bridge/multicast_snooping
0
</pre>

Then setting them to 1

<pre>
$ grep BRIDGING_OPTS /etc/sysconfig/network-scripts/ifcfg-bridge1
BRIDGING_OPTS="multicast_snooping=1 multicast_querier=1"
</pre>

Then ifdown/ifup bridge1 and the values in /sys/class now return 1

 - #CCCP-2484

--- a/templates/bridge_RedHat.j2
+++ b/templates/bridge_RedHat.j2
@@ -57,3 +57,6 @@ MTU={{ item.mtu }}
 {%- if item.nozeroconf is defined -%}
 NOZEROCONF={{ item.nozeroconf }}
 {% endif %}
+{%- if item.bridging_opts is defined -%}
+BRIDGING_OPTS="{{ item.bridging_opts }}"
+{% endif %}
