Allow defining ZONE= in EL ifcfg files
 - #CCCP-2676

--- a/templates/bond_RedHat.j2
+++ b/templates/bond_RedHat.j2
@@ -47,3 +47,6 @@ BONDING_MASTER={{ item.bonding_master }}
 {% if item.bridge is defined %}
 BRIDGE={{ item.bridge }}
 {% endif %}
+{%- if item.zone is defined -%}
+ZONE={{ item.zone }}
+{% endif %}
