--- a/templates/ethernet_RedHat.j2
+++ b/templates/ethernet_RedHat.j2
@@ -58,3 +58,9 @@ NOZEROCONF={{ item.nozeroconf }}
 {%- if item.zone is defined -%}
 ZONE={{ item.zone }}
 {% endif %}
+{%- if item.dns1 is defined -%}
+DNS1={{ item.dns1 }}
+{% endif %}
+{%- if item.dns2 is defined -%}
+DNS2={{ item.dns2 }}
+{% endif %}
