--- a/templates/bridge_RedHat.j2
+++ b/templates/bridge_RedHat.j2
@@ -63,3 +63,9 @@ BRIDGING_OPTS="{{ item.bridging_opts }}"
 {%- if item.zone is defined -%}
 ZONE={{ item.zone }}
 {% endif %}
+{%- if item.dns1 is defined -%}
+DNS1={{ item.dns1 }}
+{% endif %}
+{%- if item.dns2 is defined -%}
+DNS2={{ item.dns2 }}
+{% endif %}
